# slog

./: .clang-format  .gitignore  .gn  BUILD.gn  CMakeLists.txt  README.md  build.bat  log_stream.h  types.h  xmake.lua
src/: async_logging.cpp  async_logging.h  blocking_queue.h  copyable.h  count_down_latch.cpp  count_down_latch.h  date.cpp  date.h  exception.cpp  exception.h  file_utils.cpp  file_utils.h  log_file.cpp  log_file.h  log_stream.cpp  log_stream.h  logging.cpp  logging.h  noncopyable.h  string_view.h  time_utils_base.cpp  time_utils_base.h  timestamp.cpp  timestamp.h  timezone.cpp  timezone.h  types.h  waitable_events.cpp  waitable_events.h
test/: async_logging_test.h  main.cpp
